Moving to webpack

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<title>wave-function-collapse</title>
-		<script src="/jquery.js"></script>
-		<script src="/require.js" data-main="/setup.js"></script>
+		<script src="/bundle.js"></script>
 		<style>
 			body {
 				image-rendering: pixelated;
