Able to save as animated gifs

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
 					<option value="/img/zigs.png">Zigs</option>
 					<option value="/img/spirals.png">Spirals</option>
 					<option value="/img/square-pipes.png">Square Pipes</option>
+					<option value="/img/etsy.png">Etsy</option>
 				</select>
 				<button id="load-input-image">Load Image</button>
 			</div>
@@ -100,6 +101,7 @@
 				<button id="reset-output">Reset</button>
 				<button id="step-output">Step</button>
 				<button id="generate-output">Start Generating</button>
+				<button id="save-as-gif">Save as GIF</button>
 				<div>Entropy remaining: <span id="entropy-remaining">---</span> <div id="entropy-bar"><div id="entropy-bar-color"></div></div></div>
 			</div>
 			<div><canvas id="output-canvas"></canvas></div>
